Update background gradient and text in de2.html

--- a/de2.html
+++ b/de2.html
@@ -6,15 +6,16 @@
     <title>Magic 10-Sided Dice</title>
 
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-            background: linear-gradient(135deg, #BA7648, #7E6C7C);
-            color: #fff;
-            padding: 20px;
-            margin: 0;
-            overflow-x: hidden;
-        }
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    background: linear-gradient(135deg, #343121, #B88B4D);
+    color: #fff;
+    padding: 20px;
+    margin: 0;
+    overflow-x: hidden;
+}
+
 
         h1 {
             font-size: 2.2em;
@@ -268,7 +269,7 @@
 
                             resultatDiv.innerHTML = `
                                 <span class="emoji">🎉</span>
-                                <span class="text">to swap your dice with any player</span>
+                                <span class="text"> SWAP YOUR DICE WITH ANY PLAYER</span>
                             `;
                             resultatDiv.classList.add("action");
 
