Update special effect message for dice roll

--- a/de1.html
+++ b/de1.html
@@ -168,7 +168,7 @@
 <body>
 
     <h1>Magic 10-Sided Dice</h1>
-    <div id="info">Roll a <strong>5</strong> to have a special effect!</div>
+    <div id="info">Roll a <strong>5</strong> to draw a hard question card !</div>
 
     <img id="perso" src="image/1 1.png" alt="Personnage" />
 
