--- a/de3.html
+++ b/de3.html
@@ -123,7 +123,7 @@
 <body>
 
     <h1>Magic 10-Sided Dice</h1>
-    <div id="info">Roll a <strong>5</strong> REMOVE 1 DICE !</div>
+    <div id="info">Roll a <strong>5</strong> to REMOVE 1 DICE !</div>
 
     <img id="perso" src="image/3 1.png" alt="Personnage" />
 
