--- a/de4.html
+++ b/de4.html
@@ -123,7 +123,7 @@
 <body>
 
     <h1>Magic 10-Sided Dice</h1>
-    <div id="info">Roll a <strong>5</strong> to have a special effect !</div>
+    <div id="info">Roll a <strong>5</strong> to REROLL ONE OF YOUR DICE !</div>
 
     <img id="perso" src="image/4.png" alt="Personnage" />
 
