--- a/de2.html
+++ b/de2.html
@@ -170,7 +170,7 @@
 <body>
 
     <h1>Magic 10-Sided Dice</h1>
-    <div id="info">Roll a <strong>5</strong> to have swap your dice with any player !</div>
+    <div id="info">Roll a <strong>5</strong> to SWAP ONE OF YOUR DICE WITH ANOTHER PLAYER !</div>
 
     <!-- NOUVELLE IMAGE -->
     <img id="perso" src="image/2 1.png" alt="Personnage" />
